Kubernetes-Training-Learn-K8s-from-Zero-to-Cloud/Section-10-Ingress-Controller/grade-submission-portal/grade-submission-portal-service.yaml
#-----------------------------------------------------------------------
# File: grade-submission-portal-pod.yaml
#
# Author: Emmanuel Taylor
# Created: June 30, 2025
# Modified: June 30, 2025
#
# Description:
# Kubernetes Service definition for the grade-submission-portal application.
#
# This Service exposes the grade-submission-portal Pod externally using the
# NodePort service. It also forwards traffic from a fixed port (32000) on each
# cluster node to port 5001 of the matching pod with the label that matches
# app.kubernetes.io/instance=grade-submission-portal.
#
# This setup allows access to the grade-submission-portal from outside the
# cluster by sending requests to <NodeIP>:32000.
#-----------------------------------------------------------------------

apiVersion: v1
kind: Service
metadata:
  name: grade-submission-portal
  namespace: grade-submission
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/instance: grade-submission-portal
  ports:
  - port: 5001
    targetPort: 5001
